feat: finish documentation of API
